--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.profiles.active=dev
+server.servlet.context-path=/api
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
